# nlp-layerwise-fooler

./: README.md  eval.py  pyproject.toml  task_to_keys.json  train.py
src/: accuracy.py  attacker.py  models.py  utils.py
wallace/: train.py
wallace/utls/: attacker.py  data.py  models.py
