[tool.poetry]
name = "nlp-singular-fooler"
version = "0.1.0"
description = ""
authors = ["Olga Tsymboi"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.2"
torch = "^1.12.1"
transformers = "^4.21.1"
datasets = "^2.4.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
ipykernel = "^6.15.1"
ipywidgets = "^7.7.1"
pre-commit = "^2.20.0"
darglint = "^1.8.1"
black = "^22.6.0"
flake8-docstrings = "^1.6.0"
flake8 = "^5.0.4"
rstcheck = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
filter_files = true